test/libsolidity/syntaxTests/denominations/gwei_as_identifier.sol
contract C {
	uint constant gwei = 1;
}
// ----
// ParserError 2314: (28-32): Expected identifier but got 'gwei'
